fixed layout issues on front-page.php

--- a/themes/iflex-theme/css/front-page.css
+++ b/themes/iflex-theme/css/front-page.css
@@ -150,7 +150,7 @@
   } 
 
 .cert-main-img-container{
-  width: 60%;
+  width: 100%;
 }
     .floating-info-container {
       margin-top: -10px;
